# DMProject2025

./: CMakeLists.txt  README.md
src/: Algorithms.md  GraphAdjLexec.cpp  GraphAdjMexec.cpp
src/GraphStructures/: GraphsRepresentations.md
src/GraphStructures/GraphAdjL/: GraphAdjL.cpp  GraphAdjL.h
src/GraphStructures/GraphAdjM/: GraphAdjM.cpp  GraphAdjM.h
